Don't freak out when we have a just closed issue in our list; also made the issues display a bit more readable.

--- a/pages/css/msgs.css
+++ b/pages/css/msgs.css
@@ -189,6 +189,15 @@
 }
 
 .issueSummaryPanel .Description {
+  padding-left: 5px;
+}
+
+.issueSummaryPanel .Description a {
+  text-decoration: none;
+}
+
+.issueSummaryPanel .Description a:hover {
+  text-decoration: underline;
 }
 
 .issueSummaryPanel .State {
